do different things on grant access page if the user came from role-workspace

--- a/src/app/users/public/grant-access/grant-access.template.html
+++ b/src/app/users/public/grant-access/grant-access.template.html
@@ -3,7 +3,7 @@
 
   <!-- Domain -->
   <div *ngIf="mode !== 'edit'">
-    <samSelect name="domain" label="Domain" [model]="domain" (modelChange)="onDomainChange($event)" [options]="domainOptions" required="true" [errorMessage]="errors.domain"></samSelect>
+    <samSelect [disabled]="userCameFromRoleWorkspace" name="domain" label="Domain" [model]="domain" (modelChange)="onDomainChange($event)" [options]="domainOptions" required="true" [errorMessage]="errors.domain"></samSelect>
   </div>
   <div *ngIf="mode === 'edit'" class="">
     <div class="usa-grid-full">
