checkbox toggled Group textarea component bug fixes

--- a/src/app/assistance-listing/assistance-listing-operations/sections/authorizations/checkbox-toggled-group-textarea.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/authorizations/checkbox-toggled-group-textarea.template.html
@@ -23,6 +23,7 @@
                    [hidden]="textareaHidden[i]"
                    [control]="validationGroup.get('textarea'+i + '-' +j)"
                    [formControlName]="'textarea'+ i + '-' + j"
+                   [value]="validationGroup.get('textarea'+i + '-' +j).value"
       ></samTextArea>
       </ng-container>
     </ng-container>
