--- a/src/styles/pages/_access.scss
+++ b/src/styles/pages/_access.scss
@@ -138,7 +138,12 @@
   }
 
   .requests-container {
-    border: 2px solid $color-gold;
+    border: 2px solid black;
+    background-color: $color-gray-lightest;
+
+    .usa-button-transparent {
+      padding: .2em;
+    }
 
     .request-message {
       margin-left: -8px;
@@ -153,9 +158,7 @@
     }
   }
 
-  .text-ellipsis {
-    white-space: nowrap;
-    overflow-x: hidden;
-    text-overflow: ellipsis;
+  .no-underline {
+    text-decoration: none;
   }
 }
