--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -161,17 +161,26 @@
           </samRadioButton>
           <br/>
           <sam-contract-type-filter class="usa-award-radio"
-                          [selectModel]="awardTypeModel"
-                          [options]="awardType"
-                          (modelChange)="awardTypeSelected($event)">
+                                    [selectModel]="awardTypeModel"
+                                    [options]="awardType"
+                                    (modelChange)="awardTypeSelected($event)">
           </sam-contract-type-filter>
           <br/>
           <sam-contract-type-filter class="usa-award-radio"
-                          [selectModel]="contractTypeModel"
-                          [options]="contractType"
-                          (modelChange)="contractTypeSelected($event)">
+                                    [selectModel]="contractTypeModel"
+                                    [options]="contractType"
+                                    (modelChange)="contractTypeSelected($event)">
           </sam-contract-type-filter>
           <button (click)='awardIdvFilterClear()'>Clear</button>
+        </sam-collapsible>
+
+        <!--NAICS - PSC Filters-->
+        <sam-collapsible [label]="'Service Classifications'" [startOpened]="true" *ngIf="index==='fpds'">
+          <sam-naics-psc-filter class="usa-award-radio"
+                                [selectModel1]="naicsTypeModel"
+                                [options1]="naicsType"
+                                (modelChange1)="naicsTypeSelected($event)">
+          </sam-naics-psc-filter>
         </sam-collapsible>
         <hr>
         <button (click)='clearAllFilters()'>Clear All</button>
